Improvements and reordering of file_page - App title EntryRow text is styled using css - Moved inherent functions inside LocaleChooserRow - Added assert statements to ensure self.file is not None - Made update_page() more readable, concise and efficient - Incorporated _get_icon_row() and _update_locale() in update_page() - The fog is coming the fog is coming the fog is coming the fog is comin

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -26,3 +26,13 @@
 .app-banner-entry {
 	border-radius: 12px;
 }
+
+.title-1-row text {
+	font-weight: 800;
+	font-size: 20pt;
+}
+
+.title-2-row text {
+	font-weight: 800;
+	font-size: 15pt;
+}
